# rush

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SESSION_SUMMARIES.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: shell_bench.rs
completions/: rush.bash  rush.zsh
docs/: ARCHITECTURE.md  ASYNC_JOB_NOTIFICATIONS.md  CAPABILITY_GAPS.md  HANDOFF_RUSTY_LIBC.md  HANDOFF_RUSTY_LINES.md  HANDOFF_RUSTY_REGX.md  LIBC_DEPENDENCY_ANALYSIS.md  LINE_EDITOR.md  REGEX_DEPENDENCY_ANALYSIS.md  WINDOWS_BACKEND_ANALYSIS.md  WINDOWS_JOB_CONTROL.md  rush.1
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arith.rs  glob_match.rs  lex_parse.rs
packaging/homebrew/: rush.rb
src/: alias.rs  arith.rs  builtins.rs  completion.rs  editor.rs  exec.rs  expand.rs  func.rs  glob.rs  history_expand.rs  job.rs  lexer.rs  lib.rs  main.rs  parser.rs  sys.rs  trap.rs  unparse.rs  vars.rs  winctrlc.rs  winjob.rs  winstdio.rs
tests/: exec_behavior.rs  windows_job_control.rs
tests/pty/: editor_pty_test.py
