[package]
name = "rush"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A small, bash-compatible shell written in Rust"
repository = "https://github.com/baileyrd/rush"

[dependencies]
# `[[ $s =~ regex ]]` (C56). A minimal POSIX-ERE engine (parser + Pike VM,
# linear-time, zero deps) built to replace the `regex` crate here; v1 keeps
# the crate's leftmost-first semantics, differentially tested against it.
# Pinned to the v0.4.0 release commit (see rusty_regx's CHANGELOG) so
# engine updates are deliberate version bumps, not a floating branch.
rusty_regx = { git = "https://github.com/baileyrd/rusty_regx", rev = "6466cd2d87ce42e3c564b5a6a030c1dbb8aa6ff3" }
# The line editor (formerly src/editor.rs, extracted to its own crate):
# raw-mode terminal, emacs + vi keymaps, kill ring, undo, history search,
# bracketed paste, $RPS1 right prompt. rush drives it through its `Hooks`
# trait (completion, hints, highlighting, abbreviations, vi-mode flag).
rusty_lines = { git = "https://github.com/baileyrd/rusty_lines", branch = "main", default-features = false }

# Job control (signals, wait, process groups, fds, rlimit) is Unix-only and
# goes through the `sys` facade. The backend is target-driven (see the cfgs in
# src/sys.rs): rusty_libc on Linux by default, the libc crate on other Unix.

# Linux: rusty_libc is the default backend; libc only when forced.
[target.'cfg(target_os = "linux")'.dependencies]
rusty_libc = { git = "https://github.com/baileyrd/rusty_libc", branch = "main", optional = true }
libc = { version = "0.2", optional = true }

# Other Unix (macOS/BSD): the libc backend is the only option (rusty_libc is
# Linux-only), so libc is a plain dependency there.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2"

# The integration tests drive the built binary and also make a few syscalls of
# their own, so they always need libc.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[dev-dependencies]
# benches/shell_bench.rs — throughput for the lexer/parser, arithmetic
# evaluator, glob matcher, and variable expansion (see src/lib.rs, which
# exists so this and fuzz/ can link those modules in-process).
criterion = "0.5"

[[bench]]
name = "shell_bench"
harness = false

[features]
# rush's `sys` facade — and the line editor's — are backed by the hand-rolled
# rusty_libc crate by default. That is Linux-only, so the backend is actually
# chosen by target (src/sys.rs): rusty_libc on Linux, libc on other Unix.
default = ["rusty-libc"]
rusty-libc = ["dep:rusty_libc", "rusty_lines/rusty-libc"]
# Escape hatch: force the libc backend on Linux too
# (`--no-default-features --features libc-backend`).
libc-backend = ["dep:libc", "rusty_lines/libc-backend"]
