[package]
name = "rush-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rush]
path = ".."

# Prevent this fuzzing package from being used with `cargo test`/`cargo build`
# from the workspace root, and stop it from being folded into any ancestor
# workspace it happens to sit under (rush itself has none today, but this is
# `cargo fuzz init`'s own standard, defensive default).
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "lex_parse"
path = "fuzz_targets/lex_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "arith"
path = "fuzz_targets/arith.rs"
test = false
doc = false
bench = false

[[bin]]
name = "glob_match"
path = "fuzz_targets/glob_match.rs"
test = false
doc = false
bench = false
